--- a/playbook/tomcat_install.yml
+++ b/playbook/tomcat_install.yml
@@ -13,7 +13,7 @@
   tasks:
    - name: install default jdk
      ansible.builtin.apt:
-      name: default-jdk
+      name: openjdk-11-jdk
       upadate_cache: yes
       state: present
    - name: upadte cache and repo
